test: distinguish visible chunk backlog